--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "startCommand": "npm start"
   },
   "scripts": {
-    "compile-sass": "npx sass --watch src/assets/scss/styles.scss src/assets/css/styles.min.css"
+    "compile-sass": "npx sass --watch assets/scss/styles.scss assets/css/styles.min.css"
   },
   "devDependencies": {
     "sass": "^1.54.8"
